unpackaged/main/default/objects/ServiceAppointment/fields/Accepted_by__c.field-meta.xml
<CustomField>
    <fullName>Accepted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>