unpackaged/main/default/objects/ServiceAppointment/fields/Accepted_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Time_Stamp__c</fullName>
    <label>Accepted Time Stamp</label>
    <type>DateTime</type>
</CustomField>