unpackaged/main/default/objects/ServiceAppointment/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <formula>IF((Sub_Customer__r.Drops__c==true||Sub_Customer__r.Falcon__c==true),1,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>