unpackaged/main/default/objects/ServiceAppointment/fields/Active_Technician__c.field-meta.xml
<CustomField>
    <fullName>Active_Technician__c</fullName>
    <label>Active Technician</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>