unpackaged/main/default/objects/ServiceAppointment/fields/Active_Technician_Details__c.field-meta.xml
<CustomField>
    <fullName>Active_Technician_Details__c</fullName>
    <label>Active Technician Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>