unpackaged/main/default/objects/ServiceAppointment/fields/Actual_vs_Planned__c.field-meta.xml
<CustomField>
    <fullName>Actual_vs_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the Service appointment past the scheduled time?</description>
    <label>Actual vs Planned</label>
    <type>Checkbox</type>
</CustomField>