unpackaged/main/default/objects/ServiceAppointment/fields/Appointment_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduled_Date__c</fullName>
    <formula>DATEVALUE(SchedStartTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Scheduled Date</label>
    <type>Date</type>
</CustomField>