unpackaged/main/default/objects/ServiceAppointment/fields/Cancelled_by__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelled by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments7</relationshipName>
    <type>Lookup</type>
</CustomField>