unpackaged/main/default/objects/ServiceAppointment/fields/Cancelled_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Time_Stamp__c</fullName>
    <label>Cancelled Time Stamp</label>
    <type>DateTime</type>
</CustomField>