unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code_10_Finish__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_10_Finish__c</fullName>
    <label>Finish 10</label>
    <type>DateTime</type>
</CustomField>