unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code_10_Start__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_10_Start__c</fullName>
    <label>Start 10</label>
    <type>DateTime</type>
</CustomField>