unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code_11_Start__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_11_Start__c</fullName>
    <label>Start 11</label>
    <type>DateTime</type>
</CustomField>