unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code_12__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_12__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completion Code 12</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Completion_Code_Member__c.Service_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Type__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Completion_Code_Member__c</referenceTo>
    <relationshipLabel>Service Appointments (Completion Code 12)</relationshipLabel>
    <relationshipName>Service_AppointmentsBAOA</relationshipName>
    <type>Lookup</type>
</CustomField>