unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code_12_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_12_Quantity__c</fullName>
    <label>Quantity 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>