unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code_12_Start__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_12_Start__c</fullName>
    <label>Start 12</label>
    <type>DateTime</type>
</CustomField>