unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code__c</fullName>
    <label>Completion Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Type_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00 Collect signed BDO</fullName>
            </value>
            <value>
                <fullName>00 Dump Fee</fullName>
            </value>
            <value>
                <fullName>00 FTTH Existing Aerial Drop - 1 Span - QTY in Metres</fullName>
            </value>
            <value>
                <fullName>00 FTTH EXISTING Conduit - QTY in Metres</fullName>
            </value>
            <value>
                <fullName>00 FTTH NEW Spade P2P - QTY in Metres</fullName>
            </value>
            <value>
                <fullName>00 FTTH NEW Spade - QTY in Metres</fullName>
            </value>
            <value>
                <fullName>00 FTTH EXISTING Conduit - Cap Required</fullName>
            </value>
            <value>
                <fullName>00 Hydrovac</fullName>
            </value>
            <value>
                <fullName>02 Customer Refused - Comeback Later</fullName>
            </value>
            <value>
                <fullName>02 Customer Refused - Invalid Permission Order</fullName>
            </value>
            <value>
                <fullName>02 Customer Refused - Property Disruption</fullName>
            </value>
            <value>
                <fullName>04 Previous installation error correction</fullName>
            </value>
            <value>
                <fullName>05 No path - direct buried</fullName>
            </value>
            <value>
                <fullName>06 Engineering problem - existing drop not as per drawing</fullName>
            </value>
            <value>
                <fullName>07 Out of Fibre Boundary</fullName>
            </value>
            <value>
                <fullName>09 Wrong Boundary</fullName>
            </value>
            <value>
                <fullName>10 Safety concern</fullName>
            </value>
            <value>
                <fullName>12 Conduit inside a wall</fullName>
            </value>
            <value>
                <fullName>13 Conduit broken or plugged</fullName>
            </value>
            <value>
                <fullName>14 On Hold Waiting for Customer</fullName>
            </value>
            <value>
                <fullName>16 No Access</fullName>
            </value>
            <value>
                <fullName>18 High Cost Drops</fullName>
            </value>
            <value>
                <fullName>20 Requires Brushing or Bucket Truck</fullName>
            </value>
            <value>
                <fullName>21 Disqualified</fullName>
            </value>
            <value>
                <fullName>27 Customer Missed Booked Appointment</fullName>
            </value>
            <value>
                <fullName>35 Pre-approved quote for non-piece rate drop</fullName>
            </value>
            <value>
                <fullName>36 Quote Rejected by Rogers</fullName>
            </value>
            <value>
                <fullName>37 Permit Required</fullName>
            </value>
            <value>
                <fullName>42 Requires Aerial crew</fullName>
            </value>
            <value>
                <fullName>44 Aerial Trespass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>