unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Code_Qty__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_Qty__c</fullName>
    <label>Completion Code Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>