unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Codes__c.field-meta.xml
<CustomField>
    <fullName>Completion_Codes__c</fullName>
    <label>Completion Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>