unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Comments2__c.field-meta.xml
<CustomField>
    <fullName>Completion_Comments2__c</fullName>
    <label>Completion Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>