unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Comments__c.field-meta.xml
<CustomField>
    <fullName>Completion_Comments__c</fullName>
    <label>Completion Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>