unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Finish__c.field-meta.xml
<CustomField>
    <fullName>Completion_Finish__c</fullName>
    <label>Completion Finish</label>
    <type>DateTime</type>
</CustomField>