unpackaged/main/default/objects/ServiceAppointment/fields/Completion_Start__c.field-meta.xml
<CustomField>
    <fullName>Completion_Start__c</fullName>
    <label>Completion Start</label>
    <type>DateTime</type>
</CustomField>