unpackaged/main/default/objects/ServiceAppointment/fields/Count_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Activities__c</fullName>
    <description>Count of total Activities</description>
    <formula>IF(NOT( ISBLANK( Completion_Code_1__c )) , 1, 0) + 
IF(NOT( ISBLANK( Completion_Code_2__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_3__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_4__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_5__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_6__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_7__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_8__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_9__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_10__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_11__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_12__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_13__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_14__c )) , 1, 0) +
IF(NOT( ISBLANK( Completion_Code_15__c )) , 1, 0) +
IF(NOT( ISBLANK( Incompletion_Code_1__c  )) , 1, 0) +
IF(NOT( ISBLANK( Incompletion_Code_2__c  )) , 1, 0) +
IF(NOT( ISBLANK( Incompletion_Code_3__c  )) , 1, 0) +
IF(NOT( ISBLANK( Incompletion_Code_4__c  )) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>