unpackaged/main/default/objects/ServiceAppointment/fields/DateConflictReason__c.field-meta.xml
<CustomField>
    <fullName>DateConflictReason__c</fullName>
    <label>Date Conflict Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts Issue</fullName>
            </value>
            <value>
                <fullName>Vendor Issue</fullName>
            </value>
            <value>
                <fullName>Resource Issue</fullName>
            </value>
            <value>
                <fullName>Weather Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>