unpackaged/main/default/objects/ServiceAppointment/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <formula>(ActualStartTime &gt;  ArrivalWindowEndTime) &amp;&amp; ISPICKVAL(Delay_Reason__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay</label>
    <type>Checkbox</type>
</CustomField>