unpackaged/main/default/objects/ServiceAppointment/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Error</fullName>
            </value>
            <value>
                <fullName>Equipment Pickup</fullName>
            </value>
            <value>
                <fullName>MTTR Callout</fullName>
            </value>
            <value>
                <fullName>Personal Emergency</fullName>
            </value>
            <value>
                <fullName>Previous Appointment</fullName>
            </value>
            <value>
                <fullName>Tech Late Start</fullName>
            </value>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Vehicle Issue</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Ticket Error - Incorrect Time Zone</fullName>
            </value>
            <value>
                <fullName>Ticket Error - Incorrect Location</fullName>
            </value>
            <value>
                <fullName>Ticket Error - Incorrect Date</fullName>
            </value>
            <value>
                <fullName>Ticket Error - Incorrect Time</fullName>
            </value>
            <value>
                <fullName>Ticket Error - Incorrect SLA</fullName>
            </value>
            <value>
                <fullName>Client Error - Scheduling Overlap</fullName>
            </value>
            <value>
                <fullName>Technician Compliance Error</fullName>
            </value>
            <value>
                <fullName>Parts Not Delivered</fullName>
            </value>
            <value>
                <fullName>CSR Error</fullName>
                <isActive>false</isActive>
                <label>CSR Error</label>
            </value>
            <value>
                <fullName>Timezone Exception</fullName>
                <isActive>false</isActive>
                <label>Timezone Exception</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>