unpackaged/main/default/objects/ServiceAppointment/fields/Delay_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason_Detail__c</fullName>
    <label>Delay Reason Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>