unpackaged/main/default/objects/ServiceAppointment/fields/Dispatched_by__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatched by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>