unpackaged/main/default/objects/ServiceAppointment/fields/Dispatched_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Time_Stamp__c</fullName>
    <label>Dispatched Time Stamp</label>
    <type>DateTime</type>
</CustomField>