unpackaged/main/default/objects/ServiceAppointment/fields/Do_Not_Use_SA__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Use SA</label>
    <type>Checkbox</type>
</CustomField>