unpackaged/main/default/objects/ServiceAppointment/fields/Enroute_by__c.field-meta.xml
<CustomField>
    <fullName>Enroute_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enroute by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments2</relationshipName>
    <type>Lookup</type>
</CustomField>