unpackaged/main/default/objects/ServiceAppointment/fields/Enroute_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Enroute_Time_Stamp__c</fullName>
    <label>Enroute Time Stamp</label>
    <type>DateTime</type>
</CustomField>