unpackaged/main/default/objects/ServiceAppointment/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>ETA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>