unpackaged/main/default/objects/ServiceAppointment/fields/ETA_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ETA_Date_Time__c</fullName>
    <label>ETA Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>