unpackaged/main/default/objects/ServiceAppointment/fields/Field_Complete_by__c.field-meta.xml
<CustomField>
    <fullName>Field_Complete_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Complete by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments3</relationshipName>
    <type>Lookup</type>
</CustomField>