unpackaged/main/default/objects/ServiceAppointment/fields/Field_Complete_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Field_Complete_Time_Stamp__c</fullName>
    <label>Field Complete Time Stamp</label>
    <type>DateTime</type>
</CustomField>