unpackaged/main/default/objects/ServiceAppointment/fields/Field_Incomplete_by__c.field-meta.xml
<CustomField>
    <fullName>Field_Incomplete_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Incomplete by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments4</relationshipName>
    <type>Lookup</type>
</CustomField>