unpackaged/main/default/objects/ServiceAppointment/fields/Field_Incomplete_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Field_Incomplete_Time_Stamp__c</fullName>
    <label>Field Incomplete Time Stamp</label>
    <type>DateTime</type>
</CustomField>