unpackaged/main/default/objects/ServiceAppointment/fields/FLHA_JSR__c.field-meta.xml
<CustomField>
    <fullName>FLHA_JSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLHA/JSR</label>
    <type>Checkbox</type>
</CustomField>