unpackaged/main/default/objects/ServiceAppointment/fields/Historical_Comments__c.field-meta.xml
<CustomField>
    <fullName>Historical_Comments__c</fullName>
    <description>Custom field used in a flow that concatenates the Appointment Number, Local Arrival Start/End, Completion, and Incompletion comments from the last 5 appointments for the same address</description>
    <label>Historical Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>