unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code_1_Start__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code_1_Start__c</fullName>
    <label>Incompletion Start 1</label>
    <type>DateTime</type>
</CustomField>