unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code_2_Finish__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code_2_Finish__c</fullName>
    <label>Incompletion Finish 2</label>
    <type>DateTime</type>
</CustomField>