unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incompletion Code 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Completion_Code__c.Type__c</field>
            <operation>equals</operation>
            <value>Incomplete</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Completion_Code__c</referenceTo>
    <relationshipLabel>Service Appointments (Incompletion Code 3)</relationshipLabel>
    <relationshipName>Service_Appointments2</relationshipName>
    <type>Lookup</type>
</CustomField>