unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code_3_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code_3_Quantity__c</fullName>
    <label>Incompletion Quantity 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>