unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code__c</fullName>
    <label>Incompletion Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Travel Time On Incomplete</fullName>
            </value>
            <value>
                <fullName>02 - Other Customer Admin On Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>