unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code_Finish_3__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code_Finish_3__c</fullName>
    <label>Finish</label>
    <type>DateTime</type>
</CustomField>