unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code_Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code_Quantity_2__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>