unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Code_Start_3__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Code_Start_3__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>