unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Reason2__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Reason2__c</fullName>
    <label>Incompletion Reason</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>